Closed
Bug 1314797
Opened 9 years ago
Closed 9 years ago
"Nightly is installing components..." notification box doesn't disappear when CDM download completes
Categories
(Core :: Audio/Video: GMP, defect, P1)
Core
Audio/Video: GMP
Tracking
()
RESOLVED
FIXED
mozilla52
| Tracking | Status | |
|---|---|---|
| firefox52 | --- | fixed |
People
(Reporter: cpearce, Assigned: cpearce)
References
Details
Attachments
(1 file)
|
58 bytes,
text/x-review-board-request
|
mozbugz
:
review+
gchang
:
approval-mozilla-beta-
|
Details |
Bug 1312540 introduced a regression, STR:
1. Open Firefox with e10s on.
2. Disable "Play DRM Content" in about:preferences#content
3. Open https://shaka-player-demo.appspot.com/demo/
4. Click "Enable DRM" on the notification box that drops down from chrome.
5. Observe that the "Nightly is installing components..." notification box doesn't disappear when the CDM download completes. It does disappear after 60 second however.
What's happening is that pending MediaKeySystemAccess requests are retried when a "gmp-changed" notification comes into the content process, but with bug 1312540 we keep a cache of the GMP capabilities in the content process against which the request is retried, and that's updated *after* the "gmp-changed" notification.
Note: Bug 1312540 is still on autoland, it's not in Nightly yet.
| Assignee | ||
Updated•9 years ago
|
Priority: P3 → P1
| Comment hidden (mozreview-request) |
Comment 2•9 years ago
|
||
| mozreview-review | ||
Comment on attachment 8806927 [details]
Bug 1314797 - Dispatch 'gmp-changed' notification after updating GMP capabilities.
https://reviewboard.mozilla.org/r/90180/#review89860
Attachment #8806927 -
Flags: review?(gsquelart) → review+
Pushed by cpearce@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/45aee3afdab7
Dispatch 'gmp-changed' notification after updating GMP capabilities. r=gerald
Comment 4•9 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 9 years ago
status-firefox52:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla52
| Assignee | ||
Comment 5•9 years ago
|
||
Comment on attachment 8806927 [details]
Bug 1314797 - Dispatch 'gmp-changed' notification after updating GMP capabilities.
This uplift is to fix a regression that was introduced by the patches in bug 1312540; so if we uplift bug 1312540, we'll need this too.
Approval Request Comment
[Feature/regressing bug #]: EME/GMP decoding
[User impact if declined]: The patches in bug 1312540 fix jank on tab switch, but there was a bug in those patches that could cause the UI which notifies the user that a CDM download has completed when e10s is enabled to fail to notify the user. This would also cause the script requesting the CDM to fail to get it. Which could cause Netflix etc to fail to playback using EME on fresh Firefox installs.
[Describe test coverage new/current, TreeHerder]: We have test coverage for this in Bug 1314445, but I haven't request uplift for that since it's a clean-up type patch and a larger change
[Risks and why]: Low; it would be quite obvious if this code didn't work!
[String/UUID change made/needed]: None.
Attachment #8806927 -
Flags: approval-mozilla-beta?
Comment 6•9 years ago
|
||
Comment on attachment 8806927 [details]
Bug 1314797 - Dispatch 'gmp-changed' notification after updating GMP capabilities.
We would like this to ride the train on 52. Beta51-.
Attachment #8806927 -
Flags: approval-mozilla-beta? → approval-mozilla-beta-
You need to log in
before you can comment on or make changes to this bug.
Description
•