Bug 1314797 - Dispatch 'gmp-changed' notification after updating GMP capabilities. r=gerald

This ensures that when requests for keysystem access in the content process
retry, they do so on an up-to-date set of capabilities.

MozReview-Commit-ID: JxmlZnFhKYs

--HG--
extra : rebase_source : 6e02777be6a0692c7e157d3ab0a1952c3017c208